--- a/README
+++ b/README
@@ -1,7 +1,10 @@
 This file contains multiple Lift project templates:
 
 - lift_basic is a basic Lift application with a built-in user class
-             and nice use of Blueprint CSS
+             and nice use of Blueprint CSS and HTML5
+
+- lift_xhtml is a basic Lift application with a built-in user class
+             and nice use of Blueprint CSS and XHTML
 
 - lift_blank is a blank Lift project that does not have any model
              or CSS
