Updated to use Lift 2.4-M5

--- a/README
+++ b/README
@@ -4,6 +4,6 @@ These templates offer a starting point for your Lift-based project.
 
 If you want to start with Scala 2.8.1, use the templates in the scala_28 directory
 
-If you want to start with Scala 2.9.0-1, use the templates in the scala_29 directory
+If you want to start with Scala 2.9.1, use the templates in the scala_29 directory
 
 Questions, feedback, etc. please join the conversation at https://groups.google.com/forum/#!forum/liftweb
